KubernetesUntestedDeployement/soc-platform-kubernetes/00-namespace.yaml
# 00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: soc-platform
